	Fixed bug where layer plugin was stealing focus in IE on initialization.
	Fixed bug where body attributes wasn't set properly in the fullpage plugin, fix contributed by Hiroaki Kawai.
	Fixed bugs where dialogs/tabs and other UI elements where rendered incorrectly in Firefox 3.
	Fixed so the auto CSS class importer is compatible with 2.x.
	Fixed so header and footer elements are forced to lower case when the fullpage plugin is used.
	Fixed so load prefixes "-" for plugins and themes isn't required if the plugin/theme was loaded by the ThemeManager/PluginManager.
	Fixed so the JSONRequest uses application/json content type to make Ruby on rails happy.
	Fixed so the CSS rule is more exact for the body in the default content.css files. Body is now defined as "body.mceContentBody" instead of just "body".
	Fixed so the tiny_mce_dev.js uses XHR instead of document.write to load scripts to resolve an issue with Opera 9.50.
Version 3.0 (2008-01-30)
	Added map and area elements to the default valid_elements list and also some indentation rules.
	Fixed bug where empty paragraphs wasn't padded when loading contents.
	Fixed bug where the RowLayout manager didn't work at all.
	Fixed bug where style attribute data would get messed up in advimage dialog.
	Fixed bug where the table dialogs class select wasn't updated correctly.
	Fixed bug where elements would get extra whitespace around on insert when body was present in valid_elements.
	Fixed bug where coords attribute of the area element wasn't handled properly in IE.
	Fixed bug where Safari didn't produce BR elements on shift+return.
	Fixed bug where force blocks would cast odd invalid attribute exception in IE.
	Fixed bug where media plugin would produce extra whitespace before and after objects.
	Fixed bug where cleanup_callback could break the contents of the editor. But use the new event system instead of this option.